--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/node": "^16.18.12",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
+    "clsx": "^1.2.1",
     "env-cmd": "^10.1.0",
     "firebase": "^9.17.1",
     "lottie-react": "^2.4.0",
